# OpenKula

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  activate_nxdk.sh
kula/: CMakeLists.txt  Makefile  Makefile.win  meta.xml  system.cnf
kula/src/: audio.c  audio.h  constants.h  main.c  mixer.c  structs.h  utils.c  utils.h
kula3D/: CMakeLists.txt  Makefile  Makefile.win  meta.xml
kula3D/src/: audio.c  audio.h  constants.h  main.c  mixer.h  structs.h  utils.c  utils.h
kulatwo/: CMakeLists.txt  Makefile  Makefile.win  meta.xml
kulatwo/src/: constants.h  main.c  structs.h  utils.c  utils.h
mixer/: mixer.c  mixer.h  mixer_stub.c  mixer_stub.h
tools/: convert_coordinates.py  copy_assets_to_game.py
